@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-28T16:19:46Z",
+  "timestamp" : "2022-08-29T08:19:48Z",
   "count_outdated" : 490,
   "uniques_outdated" : 283,
-  "count" : 511,
-  "uniques" : 296,
+  "count" : 512,
+  "uniques" : 297,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -70,6 +70,13 @@
     },
     {
       "timestamp": "2022-08-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
