@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 5,
   "clones": [
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2022-08-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
