@@ -1,3 +1,11 @@
+2022-08-29T08:19:48Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2947005048
+* notice: last 14d: unq all: 5 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 283 490 / 296 511
+* notice: next accum: outdated-unq outdated-all / unq all: 283 490 / 297 512
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-08-28T16:19:46Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2943718306
 * notice: last 14d: unq all: 5 21
